<resources>
    <string name="app_name">CarTravels</string>
    <string name="title_activity_travels_home_page">TravelsHomePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="icon_menu_search">Search</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="splash_screen_image">SplashScreen</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Call Me</string>
    <string name="menu_slideshow">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_travel_home">TravelHome</string>
    <string name="menu_register">REGISTER</string>
    <string name="nav_menu_title1">General</string>
    <string name="nav_menu_title2">Security</string>

    <string name="title_activity_payment">Payment</string>
    <string name="title_after_search">Search Result</string>
    <string name="title_activity_login">Login</string>
    <string name="title_registration_page">Registration</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="payment">Payment</string>

</resources>
