<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_menu_title1">
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow" />
        </group>
        </menu>
    </item>

    <item android:title="@string/nav_menu_title2">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_Logout"
                    android:icon="@drawable/baseline_backspace_black_18dp"
                    android:title="@string/menu_logout"
                    android:onClick="onClickLogoutNav"/>
            </group>
        </menu>
    </item>
</menu>